# em_rag

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.cursor/rules/: em-rag-agent.mdc
docs/: technical_proposal.md
docs/superpowers/specs/: 2026-05-18-page-figure-rag-design.md  2026-05-19-interactive-bootstrap-design.md
em_rag/: __init__.py  __main__.py  bootstrap.py  mcp_auto.py  mcp_server.py
examples/: demo.py
examples/data/: led_demo.c  stc89c52rc.h  stc89c52rc_manual.md  stc89c52rc_pinout.txt
scripts/: download_model.py
src/: __init__.py  __main__.py  bootstrap.py  bootstrap_launcher.py  chunker.py  cli.py  config.py  element_classifier.py  embedder.py  mcp_auto.py  mcp_server.py  parser.py  retriever.py  sqlite_compat.py  store.py
src/parsers/: __init__.py  code_parser.py  docx_parser.py  epub_parser.py  markdown_parser.py  mineru_pdf_parser.py  pdf_parser.py  text_parser.py  utils.py  web_parser.py
tests/: test_bootstrap.py  test_bootstrap_launcher.py  test_cli_helpers.py  test_config.py  test_e2e.py  test_embedder.py  test_figures.py  test_mcp_auto.py  test_mcp_config.py  test_mineru_pdf_parser.py  test_parser.py  test_retrieval_expansion.py  test_sqlite_compat.py
